Fixed homepage spacing

--- a/pages/home/home.css
+++ b/pages/home/home.css
@@ -19,7 +19,7 @@ body {
   display: flex;
   flex-direction: column;
   row-gap: 1em;
-  flex: 50%;
+  flex: 100%;
 }
 
 .home-page .sidebar {
